--- a/shared/ui/src/main/res/drawable/ic_placeholder_saturn.xml
+++ b/shared/ui/src/main/res/drawable/ic_placeholder_saturn.xml
@@ -1,49 +1,17 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="241dp"
-    android:height="210dp"
+    android:height="140dp"
     android:viewportWidth="241"
-    android:viewportHeight="210">
+    android:viewportHeight="140">
   <path
-      android:pathData="M149.78,157.42c21.48,-12.4 32.38,-36.08 29.56,-59.24a611.24,611.24 0,0 1,-18.53 13.2c-1.75,12.14 -8.85,23.38 -20.3,29.98 -11.46,6.62 -24.78,7.14 -36.18,2.56a599.41,599.41 0,0 1,-20.72 9.4c18.65,14.09 44.66,16.51 66.17,4.09ZM152.6,55.26c-18.33,-11.95 -42.55,-13.41 -62.8,-1.72 -20.24,11.69 -31.09,33.39 -29.91,55.23l-0.07,-0.15c0.26,3.63 -4.77,25.25 -32.77,39.06 0,0 17.66,0.93 46.22,-10.31l-0.38,-0.8a615.71,615.71 0,0 0,13.84 -6.09,41.83 41.83,0 0,1 -2.83,-4.28C72.46,106.38 79.25,81.04 99.07,69.59c19.82,-11.44 45.16,-4.65 56.61,15.17a41.85,41.85 0,0 1,2.32 4.66,632.66 632.66,0 0,0 12.17,-8.87l0.44,0.63c24.01,-19.11 32.04,-34.87 32.04,-34.87 -25.53,17.06 -46.51,11.09 -50.05,8.95Z"
-      android:fillColor="#D9D9D9"
-      android:fillType="evenOdd"/>
+      android:pathData="M174.9,90.53c-9.13,21.47 -30.42,36.52 -55.22,36.52 -24.84,0 -46.15,-15.1 -55.26,-36.62 7.19,0.84 14.82,1.61 22.65,2.22 7.59,9.66 19.37,15.87 32.61,15.87 13.21,0 24.98,-6.18 32.57,-15.82a611.12,611.12 0,0 0,22.65 -2.16Z"
+      android:strokeAlpha="0.5"
+      android:fillColor="#000"
+      android:fillAlpha="0.32"/>
   <path
-      android:pathData="M149.78,157.42c21.48,-12.4 32.38,-36.08 29.56,-59.24a611.24,611.24 0,0 1,-18.53 13.2c-1.75,12.14 -8.85,23.38 -20.3,29.98 -11.46,6.62 -24.78,7.14 -36.18,2.56a599.41,599.41 0,0 1,-20.72 9.4c18.65,14.09 44.66,16.51 66.17,4.09ZM152.6,55.26c-18.33,-11.95 -42.55,-13.41 -62.8,-1.72 -20.24,11.69 -31.09,33.39 -29.91,55.23l-0.07,-0.15c0.26,3.63 -4.77,25.25 -32.77,39.06 0,0 17.66,0.93 46.22,-10.31l-0.38,-0.8a615.71,615.71 0,0 0,13.84 -6.09,41.83 41.83,0 0,1 -2.83,-4.28C72.46,106.38 79.25,81.04 99.07,69.59c19.82,-11.44 45.16,-4.65 56.61,15.17a41.85,41.85 0,0 1,2.32 4.66,632.66 632.66,0 0,0 12.17,-8.87l0.44,0.63c24.01,-19.11 32.04,-34.87 32.04,-34.87 -25.53,17.06 -46.51,11.09 -50.05,8.95Z"
-      android:fillType="evenOdd">
-    <aapt:attr name="android:fillColor">
-      <gradient 
-          android:centerX="127.73"
-          android:centerY="111.6"
-          android:gradientRadius="74.16"
-          android:type="radial">
-        <item android:offset="0" android:color="#FFFFBD80"/>
-        <item android:offset="0.29" android:color="#FFF17995"/>
-        <item android:offset="0.65" android:color="#FFBF52FF"/>
-        <item android:offset="0.77" android:color="#FF9F4CFF"/>
-        <item android:offset="0.88" android:color="#FF874AFF"/>
-        <item android:offset="1" android:color="#FF704CFF"/>
-      </gradient>
-    </aapt:attr>
-  </path>
-  <path
-      android:pathData="M29.8,156.81s53.22,-17.86 95.5,-42.28c42.28,-24.41 85.35,-62.14 85.35,-62.14"
-      android:strokeWidth="19.629"
-      android:fillColor="#00000000"
-      android:strokeLineCap="round">
-    <aapt:attr name="android:strokeColor">
-      <gradient 
-          android:centerX="128.91"
-          android:centerY="119.1"
-          android:gradientRadius="121.04"
-          android:type="radial">
-        <item android:offset="0" android:color="#FFFFBD80"/>
-        <item android:offset="0.29" android:color="#FFF17995"/>
-        <item android:offset="0.65" android:color="#FFBF52FF"/>
-        <item android:offset="0.77" android:color="#FF9F4CFF"/>
-        <item android:offset="0.88" android:color="#FF874AFF"/>
-        <item android:offset="1" android:color="#FF704CFF"/>
-      </gradient>
-    </aapt:attr>
-  </path>
+      android:pathData="M119.68,7.09c23.38,0 43.63,13.37 53.53,32.89 2,3.63 17.18,19.28 47.82,17.28l-0.05,0.03a297.89,297.89 0,0 0,1.89 -0.36l0.11,-0.02 0.03,-0c5.32,-1.05 10.48,2.4 11.54,7.72 1.05,5.32 -2.4,10.48 -7.72,11.54l-1.91,-9.63c1.91,9.63 1.91,9.63 1.91,9.63l-0.05,0.01 -0.14,0.03a289.78,289.78 0,0 1,-2.43 0.46c-1.67,0.31 -4.1,0.75 -7.16,1.28a748.08,748.08 0,0 1,-24.98 3.88c-20.34,2.81 -47.09,5.66 -72.14,5.66 -25.06,0 -51.53,-2.85 -71.6,-5.66a713.77,713.77 0,0 1,-24.6 -3.88c-3.01,-0.53 -5.39,-0.97 -7.03,-1.29a324.04,324.04 0,0 1,-2.39 -0.46l-0.13,-0.03 -0.05,-0.01s-0,-0 1.94,-9.62l-1.95,9.62c-5.31,-1.08 -8.75,-6.25 -7.67,-11.57 1.08,-5.31 6.25,-8.75 11.57,-7.67l0.03,0.01 0.11,0.02 0.44,0.09c0.4,0.08 0.99,0.19 1.77,0.34l0.04,0.01c29.7,1.17 44.21,-14.37 45.76,-17.56l-0.01,0.16c9.9,-19.51 30.15,-32.88 53.52,-32.88ZM78.26,65.62c0.76,-22.22 19.01,-39.99 41.41,-39.99 22.42,0 40.69,17.81 41.42,40.06 -13.4,1.27 -27.61,2.16 -41.17,2.16 -13.81,0 -28.18,-0.92 -41.67,-2.23Z"
+      android:strokeAlpha="0.5"
+      android:fillColor="#000"
+      android:fillType="evenOdd"
+      android:fillAlpha="0.32"/>
 </vector>
