--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,48 +1,33 @@
-<!--
-  ~ Copyright (c) 2025 Proton AG
-  ~ This file is part of Proton AG and Proton Authenticator.
-  ~
-  ~ Proton Authenticator is free software: you can redistribute it and/or modify
-  ~ it under the terms of the GNU General Public License as published by
-  ~ the Free Software Foundation, either version 3 of the License, or
-  ~ (at your option) any later version.
-  ~
-  ~ Proton Authenticator is distributed in the hope that it will be useful,
-  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  ~ GNU General Public License for more details.
-  ~
-  ~ You should have received a copy of the GNU General Public License
-  ~ along with Proton Authenticator.  If not, see <https://www.gnu.org/licenses/>.
-  -->
-
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:viewportWidth="256"
+    android:viewportHeight="256">
+  <path
+      android:pathData="M69,0L187,0A69,69 0,0 1,256 69L256,187A69,69 0,0 1,187 256L69,256A69,69 0,0 1,0 187L0,69A69,69 0,0 1,69 0z"
+      android:fillColor="#fff"/>
+  <path
+      android:pathData="M185,128a57,57 0,0 1,-35.19 52.66,57 57,0 0,1 -62.12,-12.36 57,57 0,0 1,8.64 -87.7A57,57 0,0 1,128 71"
+      android:strokeLineJoin="round"
+      android:strokeWidth="36"
+      android:fillColor="#00000000"
+      android:strokeLineCap="round">
+    <aapt:attr name="android:strokeColor">
+      <gradient 
+          android:centerX="187"
+          android:centerY="53"
+          android:gradientRadius="201.36"
+          android:type="radial">
+        <item android:offset="0.32" android:color="#FF6D4AFF"/>
+        <item android:offset="0.52" android:color="#FFB578D9"/>
+        <item android:offset="0.72" android:color="#FFF9AF94"/>
+        <item android:offset="0.87" android:color="#FFFFD580"/>
+      </gradient>
+    </aapt:attr>
+  </path>
+  <path
+      android:pathData="M132.5,131.56c-0.08,-1.77 0.88,-3.39 1.93,-4.82a8,8 0,1 0,-12.88 0c1.05,1.43 2.02,3.04 1.93,4.82l-0.26,5.44A4.77,4.77 0,0 0,128 142a4.77,4.77 0,0 0,4.76 -4.99l-0.26,-5.44Z"
+      android:fillColor="#583CCC"
+      android:fillType="evenOdd"/>
 </vector>
