feat: support enabling/disabling app unlock from settings option

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,6 +18,7 @@
   -->
 
 <resources>
-
-    <style name="Theme.ProtonAuthenticator" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.ProtonAuthenticator" parent="android:Theme.Material.Light.NoActionBar" >
+        <item name="colorPrimary">@color/white</item>
+    </style>
 </resources>
