--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
   ~ Copyright (c) 2025 Proton AG
   ~ This file is part of Proton AG and Proton Authenticator.
   ~
@@ -17,6 +18,7 @@
   -->
 
 <resources>
-    <string name="biometrics_activation_title">Enable Unlock</string>
-    <string name="biometrics_activation_subtitle">Enabling biometric unlock secures app access</string>
+    <style name="Theme.ProtonAuthenticator" parent="android:Theme.Material.NoActionBar" >
+        <item name="colorPrimary">@color/black</item>
+    </style>
 </resources>
