--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -28,4 +28,27 @@
         <item name="materialButtonOutlinedStyle">@style/ProtonButton.OutlinedButton.Rounded</item>
         <item name="outlinedButtonStyle">@style/ProtonButton.OutlinedButton.Rounded</item>
     </style>
+
+    <style name="Theme.ProtonAuthenticator.Dialog" parent="Proton.ThemeOverlay.AlertDialog">
+        <item name="android:background">@drawable/background_dialog_account</item>
+        <item name="buttonBarPositiveButtonStyle">@style/ProtonAuthenticator.Dialog.Button</item>
+        <item name="buttonBarNegativeButtonStyle">@style/ProtonAuthenticator.Dialog.Button</item>
+        <item name="materialAlertDialogBodyTextStyle">@style/ProtonAuthenticator.Dialog.Body</item>
+        <item name="materialAlertDialogTitleTextStyle">@style/ProtonAuthenticator.Dialog.Title</item>
+    </style>
+
+    <style name="ProtonAuthenticator.Dialog.Title" parent="Proton.MaterialAlertDialog.Title.Text">
+        <item name="android:textColor">@color/text_dialog_title</item>
+    </style>
+
+    <style name="ProtonAuthenticator.Dialog.Body" parent="Proton.Text.Default">
+        <item name="android:textColor">@color/text_dialog_body</item>
+    </style>
+
+    <style name="ProtonAuthenticator.Dialog.Button" parent="Proton.MaterialDialogButtonStyle">
+        <item name="android:paddingTop">24dp</item>
+        <item name="android:paddingBottom">24dp</item>
+        <item name="android:textColor">@color/accent</item>
+        <item name="android:textAppearance">@style/Proton.Text.DefaultSmall</item>
+    </style>
 </resources>
